# proyecto_centro_completo

./: README.md
Centro Analitico/: CentroAnalitico.py  fuentes_globales.json  informe_dashboard2_centroanalitico.md  usuarios.json  web_contacts.json  web_sources.json
Centro Analitico/esmb/: conectar.py
NUEVO_PROTECT/1_SSO_Portal_Go/: .antigravity-rules.md  go.mod  go.sum  main.go
NUEVO_PROTECT/1_SSO_Portal_Go/migrations/: add_freq_range_to_estaciones.sql
NUEVO_PROTECT/2_Sentinel_Core_Cpp/: CMakeLists.txt  decoder.cpp  decoder.h  index.html  main.cpp  obfuscator.h  stream_manager.cpp  stream_manager.h
NUEVO_PROTECT/3_Nginx_Frontend/: nginx.conf
NUEVO_PROTECT/3_Nginx_Frontend/html/awacs/: app.js  index.html  style.css
NUEVO_PROTECT/3_Nginx_Frontend/html/procesos/: winremote-manager.html
NUEVO_PROTECT/4_centro_analitico/: go.mod  index.html  main.go  pintor.py  preview_helper.py  procesar_usuario.py  registrar_auditoria.py
NUEVO_PROTECT/launcher/: Centro_CTER.go  amain.goo  go.mod
Panel de control/: indexservicios.html
RedCeter/: INSTALACION.md  config.json  estado_nodos.json  fix_mojibake.py  fix_ui.py  historial_nodos.json  importacion.xlsx  importar_telemandos.py  informe_remodeladopy.md  server.py  test_conexion_smb.py  xlsx.full.min.js
RedCeter/public/: app.js  index.html  style.css
SentielwebServer/: .gitignore  informe_sentinelwebserver.md
SentielwebServer/Sentinel_Proyecto_Qt/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ArgusSentinel.cpp  ArgusSentinel.h  ArgusSentinel.sln  ArgusSentinel.vcxproj  ArgusSentinel.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ConfiguradorFuentes.cpp  ConfiguradorFuentes.h  VisorCapturas.cpp  VisorCapturas.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.cpp
SentielwebServer/Sentinel_Proyecto_Qt/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
SentielwebServer/Sentinel_Proyecto_Qt/ArgusSentinel.dir/Release/: ArgusSentinel.exe.recipe
SentielwebServer/Sentinel_Proyecto_Qt/ArgusSentinel.dir/Release/ArgusSentinel.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
SentielwebServer/Sentinel_Proyecto_Qt/ArgusSentinel_autogen/: mocs_compilation_Release.cpp
SentielwebServer/Sentinel_Proyecto_Qt/ArgusSentinel_autogen/include_Release/EWIEGA46WW/: moc_ArgusSentinel.cpp  moc_ArgusSentinel.cpp.d  moc_ConfiguradorFuentes.cpp  moc_ConfiguradorFuentes.cpp.d  moc_VisorCapturas.cpp  moc_VisorCapturas.cpp.d  moc_qcustomplot.cpp  moc_qcustomplot.cpp.d
SentielwebServer/Sentinel_Proyecto_Qt/SentinelCplus/: sentinel_fuentes.json
SentielwebServer/Sentinel_Proyecto_Qt/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
SentielwebServer/Sentinel_Proyecto_Qt/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
SentielwebServer/Sentinel_Proyecto_Qt/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
SentielwebServer/Sentinel_Proyecto_Qt/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
SentielwebServer/backend/: CMakeLists.txt  ConfiguradorFuentes.cpp  ConfiguradorFuentes.h  RadarMonitor.cpp  RadarMonitor.h  SentinelServer.cpp  SentinelServer.h  main.cpp
SentielwebServer/backend/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
SentielwebServer/public/: app2.js  index.html  style2.css
ServerVNCweb/: data.json  index.html  jwcrypto-1.5.7-py3-none-any.whl  targets.conf  vnc_server.py
esmb/: 101.html  101_zs192_fisico.spm  101line.html  ExtDrv.tlb  G_ATTN.UMF  app.spec  app_escaner.py  argus_commands_audit.md  brute_com2.py  brute_com2.spec  brute_com2_ultimate.py  brute_com2_ultimate.spec  brute_force_bits.py  check_options.py  check_port_status.py  control_selector_definitivo.py  escaner_frecuencia.py  escaner_original.py  esmb_spy_proxy.py  gonio1.html  gonio2.html  gonio3.html  gonio4.html  gonio5.html  goniometro.spm  medidas_20260430_002946.csv  medidas_20260430_003013.csv  medidas_20260430_003314.csv  medidas_20260430_212458.csv  medidas_20260430_212622.csv  medidas_20260504_005048.csv  moni_esmb.py  run_audit.py  syntax_scanner.py  test_antena.py  test_antena_ext.py  test_antena_ext_v2.py  test_antenna_comparison.py  test_df_final.py  test_df_real.py  (+15 more)
esmb/Devices/: G_ANTENNA.UMF  G_BG030.UMF  G_COMP.UMF  G_DCI.UMF  G_DDF0XAE.UMF  G_DDF1XX.UMF  G_DF0XM.UMF  G_DRM.UMF  G_EB2004.UMF  G_EFA.UMF  G_EK89X.UMF  G_EPOWER.UMF  G_ESIX.UMF  G_ESM.UMF  G_ESMC.UMF  G_ESMD.UMF  G_ESUX.UMF  G_ESX.UMF  G_ESXI.UMF  G_ESXN.UMF  G_ETL.UMF  G_FAM.UMF  G_FILTER.UMF  G_FMX.UMF  G_FSHX.UMF  G_FSPX.UMF  G_FSQX.UMF  G_FSUx.UMF  G_FSVX.UMF  G_FSX.UMF  G_FU129.UMF  G_GPS.UMF  G_GX300.UMF  G_HE700.UMF  G_IDNT.UMF  G_MFCX.UMF  G_MIXER.UMF  G_P1555.UMF  G_PA025.UMF  G_PAX55.UMF  (+29 more)
esmb/Devices/05030001/: G_EB2004.UMF
esmb/Devices/05030006/: G_ETL.UMF
esmb/Devices/05030020/: G_ANT.UMF  S_ANT.UMF
esmb/Devices/05040001/: G_ESMD.UMF
esmb/Devices/05040100/: G_ESMD.UMF
esmb/Devices/05040103/: G_ESMD.UMF
esmb/SentinelESMBWeb/: SentinelESMB.spec  app.py  app.spec
esmb/SentinelESMBWeb/templates/: index.html
esmb/static/css/: style.css
esmb/static/js/: app.js
esmb/sustargus/: Sustargus.spec  app.py  grabador_esmb_ok.py  recorder.py  requirements.txt  test_raw_capture.csv  test_raw_esmb.py  test_rs_capture.csv
esmb/sustargus/data/: .secret_key  sustargus.db
esmb/sustargus/datos/: MARBELLA_20260501_000205.csv
esmb/sustargus/templates/: dashboard.html  login.html  sentinel.html
esmb/templates/: index.html
(+14 files in other folders)
